--- a/2단계_if문.ipynb
+++ b/2단계_if문.ipynb
@@ -170,7 +170,7 @@
         "\n",
         "if (n % 4 == 0 and n % 100 != 0) or (n % 400 == 0):\n",
         "  print(1)\n",
-        "elif n % 4 == 0 and n % 100 == 0:\n",
+        "else:\n",
         "  print(0)"
       ],
       "execution_count": 15,
